--- a/pages/detail-page.html
+++ b/pages/detail-page.html
@@ -25,7 +25,7 @@
         <h2>Comments</h2>
         <div id="commentsSpace">
           <section class="comment">
-            <h3>Wambui said:</h3>
+            <h3>Ariel said:</h3>
             <p>"This is definitely one of my favorites!"</p>
           </section>
         </div>
